add mocking, visual regression and accessibility test

--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "devDependencies": {
     "@playwright/test": "^1.52.0",
     "@types/node": "^22.15.29"
+  },
+  "dependencies": {
+    "@axe-core/playwright": "^4.10.2"
   }
 }
